src/test/ui/borrowck/borrowck-init-in-called-fn-expr.rs
fn main() {
    let j = || -> isize {
        let i: isize;
        i //~ ERROR use of possibly uninitialized variable: `i`
    };
    j();
}
